[metadata]
name = deploy-nebulom
version = 0.0.1
author = nebulom
author_email = nebulom@gmail.com
description = A simple python deploy utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scoollabs/deploy
project_urls =
    Bug Tracker = https://github.com/scoollabs/deploy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
